--- a/choropleth-generation/cube-to-chart.ipynb
+++ b/choropleth-generation/cube-to-chart.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "org.apache.commons.math3.stat.regression.SimpleRegression"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "#'user/trend"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "nil"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -186,11 +186,11 @@
       "\n",
       "|          :council | :councilCode | :year |         :tonnagePerCitizen |\n",
       "|-------------------+--------------+-------+----------------------------|\n",
-      "| East Renfrewshire |    S12000011 |  2017 | 0.501941747572815533980583 |\n",
-      "|    Orkney Islands |    S12000023 |  2011 | 0.478758169934640522875817 |\n",
-      "|       Dundee City |    S12000042 |  2011 | 0.464456521739130434782609 |\n",
-      "|             Angus |    S12000041 |  2013 | 0.466574941955456187118411 |\n",
-      "|     Aberdeenshire |    S12000034 |  2012 | 0.527109093754891219283143 |\n"
+      "|    South Ayrshire |    S12000028 |  2013 | 0.491033932843093824754142 |\n",
+      "|          Scotland |    S92000003 |  2017 | 0.453624096740893673499484 |\n",
+      "|   Argyll and Bute |    S12000035 |  2016 | 0.616194192585791346264203 |\n",
+      "|   Argyll and Bute |    S12000035 |  2015 | 0.596696973184486131890897 |\n",
+      "| South Lanarkshire |    S12000029 |  2017 | 0.476914856837539680045259 |\n"
      ]
     },
     {
@@ -199,7 +199,7 @@
        "nil"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "nil"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -287,13 +287,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|            :council |  :recent | :average |    :trend |\n",
-      "|---------------------+----------+----------+-----------|\n",
-      "|    Scottish Borders | 0.455374 | 0.454524 | -0.001324 |\n",
-      "|   South Lanarkshire | 0.471663 | 0.482378 | -0.003732 |\n",
-      "|       Aberdeen City | 0.375901 | 0.411855 | -0.007918 |\n",
-      "|   Perth and Kinross | 0.474684 | 0.507261 | -0.005785 |\n",
-      "| East Dunbartonshire | 0.476719 | 0.511911 | -0.005944 |\n"
+      "|         :council |  :recent | :average |    :trend |\n",
+      "|------------------+----------+----------+-----------|\n",
+      "| Clackmannanshire | 0.508210 | 0.533003 | -0.007780 |\n",
+      "|      Dundee City | 0.408558 | 0.442179 | -0.005313 |\n",
+      "|            Angus | 0.470691 | 0.497753 | -0.006480 |\n",
+      "|     East Lothian | 0.473901 | 0.499116 | -0.007190 |\n",
+      "|            Angus | 0.470691 | 0.497753 | -0.006480 |\n"
      ]
     },
     {
@@ -302,7 +302,7 @@
        "nil"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "nil"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -377,8 +377,8 @@
      "output_type": "stream",
      "text": [
       "to-format: :html\n",
-      "[I 10:30:45.242 Clojupyter] oz.core:425 -- input: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/b6696521-3093-44ea-9f25-793a802782a02790087172975336132.vl.json\n",
-      "[I 10:30:45.467 Clojupyter] oz.core:426 -- output: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/1a4d5fd0-fa02-4f52-bb3d-36e387fe39921389510715596397414.png\n"
+      "[I 14:42:32.947 Clojupyter] oz.core:425 -- input: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/a7ff0e95-d21a-4a80-97e5-619e9f0cba826267511786189011164.vl.json\n",
+      "[I 14:42:33.001 Clojupyter] oz.core:426 -- output: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/7e17d605-ef6b-4437-9d22-cc0d7d5690a21725674012211629027.png\n"
      ]
     },
     {
@@ -386,7 +386,7 @@
       "text/html": [
        "\n",
        "  <div>\n",
-       "    <div id='uuid-a95fc1ef-23ca-4066-bcb4-a522be4c4c15'></div>\n",
+       "    <div id='uuid-a89bdc5a-31ba-4813-ae56-486c5ee13d0b'></div>\n",
        "    <script>\n",
        "    requirejs.config({\n",
        "      baseUrl: 'https://cdn.jsdelivr.net/npm/',\n",
@@ -398,8 +398,8 @@
        "      }\n",
        "    });\n",
        "    require(['vega-embed'], function(vegaEmbed) {\n",
-       "      let spec = {\"$schema\":\"https:\\/\\/vega.github.io\\/schema\\/vega-lite\\/v4.json\",\"repeat\":{\"row\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 trend in tonnage\"]},\"resolve\":{\"scale\":{\"color\":\"independent\"}},\"spec\":{\"width\":\"500\",\"height\":\"500\",\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/topo_lad.json\",\"format\":{\"type\":\"topojson\",\"feature\":\"lad\"}},\"transform\":[{\"lookup\":\"properties['LAD13NM']\",\"from\":{\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/stats-on-tonnage-generated-per-council-citizen.csv\"},\"key\":\"council\",\"fields\":[\"recent\",\"average\",\"trend\"]},\"as\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 trend in tonnage\"]}],\"projection\":{\"type\":\"albers\",\"rotate\":[0,0,0]},\"mark\":{\"type\":\"geoshape\",\"strokeWidth\":0.2,\"stroke\":\"black\"},\"encoding\":{\"tooltip\":[{\"title\":\"council\",\"field\":\"properties['LAD13NM']\",\"type\":\"nominal\"},{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}],\"color\":{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}}}};\n",
-       "      vegaEmbed('#uuid-a95fc1ef-23ca-4066-bcb4-a522be4c4c15', spec, {defaultStyle:true}).catch(console.warn);\n",
+       "      let spec = {\"$schema\":\"https:\\/\\/vega.github.io\\/schema\\/vega-lite\\/v4.json\",\"repeat\":{\"row\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 trend in tonnage\"]},\"resolve\":{\"scale\":{\"color\":\"independent\"}},\"spec\":{\"width\":\"500\",\"height\":\"500\",\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/master\\/choropleth-generation\\/topo_lad.json\",\"format\":{\"type\":\"topojson\",\"feature\":\"lad\"}},\"transform\":[{\"lookup\":\"properties['LAD13NM']\",\"from\":{\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/master\\/choropleth-generation\\/stats-on-tonnage-generated-per-council-citizen.csv\"},\"key\":\"council\",\"fields\":[\"recent\",\"average\",\"trend\"]},\"as\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 trend in tonnage\"]}],\"projection\":{\"type\":\"albers\",\"rotate\":[0,0,0]},\"mark\":{\"type\":\"geoshape\",\"strokeWidth\":0.2,\"stroke\":\"black\"},\"encoding\":{\"tooltip\":[{\"title\":\"council\",\"field\":\"properties['LAD13NM']\",\"type\":\"nominal\"},{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}],\"color\":{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}}}};\n",
+       "      vegaEmbed('#uuid-a89bdc5a-31ba-4813-ae56-486c5ee13d0b', spec, {defaultStyle:true}).catch(console.warn);\n",
        "      }, function(err) {\n",
        "      console.log('Failed to load');\n",
        "    });\n",
@@ -408,7 +408,7 @@
        "    "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
