--- a/choropleth-generation/README.adoc
+++ b/choropleth-generation/README.adoc
@@ -1,7 +1,7 @@
 = The geography of household waste generation
 
 
-.Working on his human geography homework, Rory asks:
+._Working on his human geography homework, Rory asks:_
 > Which areas in Scotland are reducing their household waste?"
 
 
@@ -30,8 +30,8 @@ against the council-oriented geography of Scotland.
 
 The resulting choropleths can be viewed on >> https://data-commons-scotland.github.io/choropleth-generation/choropleths.html[this page] <<
 
-.Rory looks at the “2011-2018 trend in tonnage” choropleth, and thinks…
+._Rory looks at the “2011-2018 trend in tonnage” choropleth, and thinks…_
 >It’s good to see that most areas are reducing waste generation but why not some…?
 
-.Looking at the “2018 tonnage” and 2011-2018 average tonnage” choropleths, Niamh wonders…
+._Looking at the “2018 tonnage” and 2011-2018 average tonnage” choropleths, Niamh wonders…_
 > I wonder why urban populations _seem_ to generated less waste than rural ones?
