an intermediate check in

--- a/dataset-into-wikidata/dataset-into-wikidata.ipynb
+++ b/dataset-into-wikidata/dataset-into-wikidata.ipynb
@@ -19,16 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "nil"
+       "java.net.URLEncoder"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,12 +47,14 @@
     "         '[clojure.pprint :as pp]\n",
     "         '[clojure.java.io :as io]\n",
     "         '[clojure.data.csv :as csv]\n",
-    "         '[clj-http.client :as http])"
+    "         '[clj-http.client :as http])\n",
+    "\n",
+    "(import 'java.net.URLEncoder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +63,7 @@
        "#'user/exec-query"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,6 +251,13 @@
     "        (map #(set/rename-keys % {:areaEntityLabel :label}))))\n",
     "\n",
     "(println (count area-codes-wikidata) \"rows\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hyperlink to try out the above SPARQL: [https://w.wiki/boe](https://w.wiki/boe)"
    ]
   },
   {
@@ -537,6 +546,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hyperlink to try out the above SPARQL: [https://w.wiki/boc](https://w.wiki/boc)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 152,
    "metadata": {},
@@ -748,14 +764,28 @@
     "\n",
     "show line graph plot\n",
     "\n",
+    "[line graph](https://query.wikidata.org/embed.html#%23defaultView%3ALineChart%0ASELECT%20%0A%20%20%3FcouncilArea%0A%20%20(str(YEAR(%3FpopulationWhen))%20as%20%3Fyear%20)%0A%20%20%3Fpopulation%0A%20%20%3FcouncilAreaLabel%0AWHERE%20%7B%0A%20%20%3FcouncilArea%20wdt%3AP31%20wd%3AQ15060255%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20p%3AP1082%20%3FpopulationEntity%20.%0A%20%20%3FpopulationEntity%20ps%3AP1082%20%3Fpopulation%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20pq%3AP585%20%3FpopulationWhen%20.%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%27%5BAUTO_LANGUAGE%5D%2Cen%27%20.%20%7D%0A%7D)\n",
+    "\n",
     "mention how this now enables 'per citizen' statistics and visualizations\n",
     "\n",
     "...for example, waste, recycling and carbon impacts  amounts and trends ...per citizen\n",
     "\n",
     "...no exisiting appropriate Property so would have to get new ones ratified and then upload the waste and carbon impact datasets.\n",
     "\n",
+    "Mind you, why cache the pop data in wikidata? Why not just ref it from ScotGov? (If not easy to do them make a service to help.)\n",
+    "\n",
+    "If wikimedia is too difficult to edit then maybe a wordpress site with tools for easily re-ref-ing linked data?\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Wikipedia:Requests_for_comment/Wikidata_Phase_2  contains interesting discussions on why inserting wikidata into wikipredia articles etc may/may not be a good idea (at least at present).\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
