--- a/dataset-into-wikidata/dataset-into-wikidata.ipynb
+++ b/dataset-into-wikidata/dataset-into-wikidata.ipynb
@@ -756,43 +756,34 @@
    "metadata": {},
    "source": [
     "\n",
-    "When I ran the above CSV generation for the first time - the output is in [this file](population-values-quickstatements-2020-09-09T11_20GMT.csv) - it specified 2232 _individual_ edits to Wikidata. These were successfully executed (taking about 30 mins) against Wikidata by QuickStatements.\n",
+    "When I ran the above CSV generation for the first time - the output is in [this file](population-values-quickstatements-2020-09-09T11_20GMT.csv) - it specified 2232 _individual_ edits to Wikidata. These were successfully executed (taking about 30 mins) against Wikidata by QuickStatements. (Unfortunately QuickStatements does not yet support a means to set the `rank` of a triple so I had to individually edit the 32 council area pages to mark, in each, its 2019 population value  as the `Preferred rank` population value - indicating that it is the most up-to-date population value.) \n",
     "\n",
     "## 4. The usefulness of the uploaded dataset\n",
     "\n",
-    "TODO\n",
+    "The uploaded dataset can be pulled (dynamically _de-referenced_) into Wikipedia articles and other web pages. \n",
     "\n",
-    "show line graph plot\n",
+    "### 4.1. Embedding dataset values into Wikipedia articles\n",
     "\n",
-    "[line graph](https://query.wikidata.org/embed.html#%23defaultView%3ALineChart%0ASELECT%20%0A%20%20%3FcouncilArea%0A%20%20(str(YEAR(%3FpopulationWhen))%20as%20%3Fyear%20)%0A%20%20%3Fpopulation%0A%20%20%3FcouncilAreaLabel%0AWHERE%20%7B%0A%20%20%3FcouncilArea%20wdt%3AP31%20wd%3AQ15060255%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20p%3AP1082%20%3FpopulationEntity%20.%0A%20%20%3FpopulationEntity%20ps%3AP1082%20%3Fpopulation%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20pq%3AP585%20%3FpopulationWhen%20.%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%27%5BAUTO_LANGUAGE%5D%2Cen%27%20.%20%7D%0A%7D)\n",
+    "For example, I edited the Wikipedia article [Council areas of Scotland](https://simple.wikipedia.org/wiki/Council_areas_of_Scotland) to its main table, the new column \"_Number of people (latest estimate)_\" whose values are pulled (each time the page is rendered) directly from the data that we have uploaded into Wikidata.\n",
+    "![Screenshot of Wikipedia article](screenshot-wikipedia-council-areas-article.png)\n",
     "\n",
-    "mention how this now enables 'per citizen' statistics and visualizations\n",
+    "### 4.2. Embedding dataset based graphs into web pages\n",
     "\n",
-    "...for example, waste, recycling and carbon impacts  amounts and trends ...per citizen\n",
+    "And >>[here](https://query.wikidata.org/embed.html#%23defaultView%3ALineChart%0ASELECT%20%0A%20%20%3FcouncilArea%0A%20%20(str(YEAR(%3FpopulationWhen))%20as%20%3Fyear%20)%0A%20%20%3Fpopulation%0A%20%20%3FcouncilAreaLabel%0AWHERE%20%7B%0A%20%20%3FcouncilArea%20wdt%3AP31%20wd%3AQ15060255%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20p%3AP1082%20%3FpopulationEntity%20.%0A%20%20%3FpopulationEntity%20ps%3AP1082%20%3Fpopulation%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20pq%3AP585%20%3FpopulationWhen%20.%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%27%5BAUTO_LANGUAGE%5D%2Cen%27%20.%20%7D%0A%7D)<< is a line graph, dynamically generated from the new Wikidata data, that can be embedded in any web page.\n",
     "\n",
-    "...no exisiting appropriate Property so would have to get new ones ratified and then upload the waste and carbon impact datasets.\n",
+    "### 4.3. Concerns, next steps, alternative approaches\n",
     "\n",
-    "Mind you, why cache the pop data in wikidata? Why not just ref it from ScotGov? (If not easy to do them make a service to help.)\n",
+    "Interestingly, there is [some discussion](https://en.wikipedia.org/wiki/Wikipedia:Requests_for_comment/Wikidata_Phase_2) about the pros & cons of inserting Wikidata values into Wikipedia articles. The main argument (by some) against is the immaturity of Wikidata's structure: therefore a concern about the permanence of references to data within its structure. But those for it, point out that early use & evolution might be the best path to a maturity. \n",
     "\n",
-    "If wikimedia is too difficult to edit then maybe a wordpress site with tools for easily re-ref-ing linked data?\n",
+    "The case study for our Data Commons Scotland project, is _open data about waste in Scotland_. So a next step for the project might be to upload into Wikidata, datasets that describe the amounts of household waste generated & recycled, and 'carbon impact' figures. These could also be linked to [council areas](https://www.wikidata.org/wiki/Q15060255) - as we have done the population dataset - to support _per council area_/_per citizen_ statistics and visualisations. Appropriate [properties](https://www.wikidata.org/wiki/Q18616576) do not yet exist in Wikidata for the description of such data about waste, so new ones would need to be ratified by the Wikidata community.\n",
     "\n",
-    "https://en.wikipedia.org/wiki/Wikipedia:Requests_for_comment/Wikidata_Phase_2  contains interesting discussions on why inserting wikidata into wikipredia articles etc may/may not be a good idea (at least at present).\n",
+    "Should should datasets actually be uploaded into Wikidata? These are small datasets and they seem to fit well enough into Wikidata's information graph. Uploading them into Wikidata may make them easier to access and help enrich Wikidata's information graph. But then, of course, there is the _keeping it up-to-date_ issue to deal with. \n",
+    "Alternatively, those datasets could be pulled directly from statistics.gov.scot, into Wikipedia  articles with the help of some new MediaWiki [extensions](https://www.mediawiki.org/wiki/Category:Extensions).\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
