add the Wikipedia screenshot

--- a/dataset-into-wikidata/dataset-into-wikidata.ipynb
+++ b/dataset-into-wikidata/dataset-into-wikidata.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "java.net.URLEncoder"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "#'user/exec-query"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "nil"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -170,13 +170,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |             :label |\n",
-      "|-----------+--------------------|\n",
-      "| S12000013 | Na h-Eileanan Siar |\n",
-      "| S12000030 |           Stirling |\n",
-      "| S12000029 |  South Lanarkshire |\n",
-      "| S12000021 |     North Ayrshire |\n",
-      "| S12000030 |           Stirling |\n"
+      "|     :code |            :label |\n",
+      "|-----------+-------------------|\n",
+      "| S12000047 |              Fife |\n",
+      "| S12000021 |    North Ayrshire |\n",
+      "| S12000050 | North Lanarkshire |\n",
+      "| S12000047 |              Fife |\n",
+      "| S12000008 |     East Ayrshire |\n"
      ]
     },
     {
@@ -185,7 +185,7 @@
        "nil"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,15 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[W 18:57:25.201 Clojupyter] org.apache.http.client.protocol.ResponseProcessCookies:130 -- Invalid cookie header: \"Set-Cookie: WMF-Last-Access=10-Sep-2020;Path=/;HttpOnly;secure;Expires=Mon, 12 Oct 2020 12:00:00 GMT\". Invalid 'expires' attribute: Mon, 12 Oct 2020 12:00:00 GMT\n",
-      "[W 18:57:25.203 Clojupyter] org.apache.http.client.protocol.ResponseProcessCookies:130 -- Invalid cookie header: \"Set-Cookie: WMF-Last-Access-Global=10-Sep-2020;Path=/;Domain=.wikidata.org;HttpOnly;secure;Expires=Mon, 12 Oct 2020 12:00:00 GMT\". Invalid 'expires' attribute: Mon, 12 Oct 2020 12:00:00 GMT\n",
       "32 rows\n"
      ]
     },
@@ -224,7 +222,7 @@
        "nil"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -270,13 +268,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |              :label |\n",
-      "|-----------+---------------------|\n",
-      "| S12000045 | East Dunbartonshire |\n",
-      "| S12000019 |          Midlothian |\n",
-      "| S12000049 |        Glasgow City |\n",
-      "| S12000027 |    Shetland Islands |\n",
-      "| S12000018 |          Inverclyde |\n"
+      "|     :code |         :label |\n",
+      "|-----------+----------------|\n",
+      "| S12000047 |           Fife |\n",
+      "| S12000021 | North Ayrshire |\n",
+      "| S12000030 |       Stirling |\n",
+      "| S12000028 | South Ayrshire |\n",
+      "| S12000010 |   East Lothian |\n"
      ]
     },
     {
@@ -285,7 +283,7 @@
        "nil"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +326,7 @@
        "nil"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +398,7 @@
        "nil"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -456,13 +454,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |             :label | :year | :population |\n",
-      "|-----------+--------------------+-------+-------------|\n",
-      "| S12000035 |    Argyll and Bute |  2013 |       88050 |\n",
-      "| S12000040 |       West Lothian |  2016 |      180130 |\n",
-      "| S12000013 | Na h-Eileanan Siar |  2013 |       27400 |\n",
-      "| S12000026 |   Scottish Borders |  2009 |      113590 |\n",
-      "| S12000030 |           Stirling |  2004 |       86920 |\n"
+      "|     :code |            :label | :year | :population |\n",
+      "|-----------+-------------------+-------+-------------|\n",
+      "| S12000023 |    Orkney Islands |  2011 |       21420 |\n",
+      "| S12000023 |    Orkney Islands |  2018 |       22190 |\n",
+      "| S12000050 | North Lanarkshire |  2008 |      333280 |\n",
+      "| S12000048 | Perth and Kinross |  2002 |      135130 |\n",
+      "| S12000018 |        Inverclyde |  2001 |       84150 |\n"
      ]
     },
     {
@@ -471,7 +469,7 @@
        "nil"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,15 +490,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[W 20:42:56.400 Clojupyter] org.apache.http.client.protocol.ResponseProcessCookies:130 -- Invalid cookie header: \"Set-Cookie: WMF-Last-Access=10-Sep-2020;Path=/;HttpOnly;secure;Expires=Mon, 12 Oct 2020 12:00:00 GMT\". Invalid 'expires' attribute: Mon, 12 Oct 2020 12:00:00 GMT\n",
-      "[W 20:42:56.408 Clojupyter] org.apache.http.client.protocol.ResponseProcessCookies:130 -- Invalid cookie header: \"Set-Cookie: WMF-Last-Access-Global=10-Sep-2020;Path=/;Domain=.wikidata.org;HttpOnly;secure;Expires=Mon, 12 Oct 2020 12:00:00 GMT\". Invalid 'expires' attribute: Mon, 12 Oct 2020 12:00:00 GMT\n",
       "608 rows\n"
      ]
     },
@@ -510,7 +506,7 @@
        "nil"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -562,13 +558,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |              :label | :year | :population |\n",
-      "|-----------+---------------------+-------+-------------|\n",
-      "| S12000038 |        Renfrewshire |  2009 |      173020 |\n",
-      "| S12000008 |       East Ayrshire |  2008 |      121600 |\n",
-      "| S12000039 | West Dunbartonshire |  2014 |       89710 |\n",
-      "| S12000013 |      Outer Hebrides |  2003 |       26430 |\n",
-      "| S12000030 |            Stirling |  2019 |       94210 |\n"
+      "|     :code |            :label | :year | :population |\n",
+      "|-----------+-------------------+-------+-------------|\n",
+      "| S12000023 |    Orkney Islands |  2017 |       22000 |\n",
+      "| S12000023 |    Orkney Islands |  2001 |       19220 |\n",
+      "| S12000050 | North Lanarkshire |  2019 |      341370 |\n",
+      "| S12000048 | Perth and Kinross |  2012 |      147740 |\n",
+      "| S12000027 |  Shetland Islands |  2011 |       23240 |\n"
      ]
     },
     {
@@ -577,7 +573,7 @@
        "nil"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +612,7 @@
        "nil"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,15 +670,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[W 12:21:37.648 Clojupyter] org.apache.http.client.protocol.ResponseProcessCookies:130 -- Invalid cookie header: \"Set-Cookie: WMF-Last-Access=10-Sep-2020;Path=/;HttpOnly;secure;Expires=Mon, 12 Oct 2020 12:00:00 GMT\". Invalid 'expires' attribute: Mon, 12 Oct 2020 12:00:00 GMT\n",
-      "[W 12:21:37.652 Clojupyter] org.apache.http.client.protocol.ResponseProcessCookies:130 -- Invalid cookie header: \"Set-Cookie: WMF-Last-Access-Global=10-Sep-2020;Path=/;Domain=.wikidata.org;HttpOnly;secure;Expires=Mon, 12 Oct 2020 12:00:00 GMT\". Invalid 'expires' attribute: Mon, 12 Oct 2020 12:00:00 GMT\n",
       "32 rows\n"
      ]
     },
@@ -692,7 +686,7 @@
        "#'user/code->qid"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +722,7 @@
        "nil"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
