--- a/dataset-into-wikidata/dataset-into-wikidata.ipynb
+++ b/dataset-into-wikidata/dataset-into-wikidata.ipynb
@@ -759,11 +759,12 @@
     "### 4.1. Embedding dataset values into Wikipedia articles\n",
     "\n",
     "For example, I edited the Wikipedia article [Council areas of Scotland](https://simple.wikipedia.org/wiki/Council_areas_of_Scotland) to its main table, the new column \"_Number of people (latest estimate)_\" whose values are pulled (each time the page is rendered) directly from the data that we have uploaded into Wikidata.\n",
+    "\n",
     "![Screenshot of Wikipedia article](screenshot-wikipedia-council-areas-article.png)\n",
     "\n",
     "### 4.2. Embedding dataset based graphs into web pages\n",
     "\n",
-    "And >>[here](https://query.wikidata.org/embed.html#%23defaultView%3ALineChart%0ASELECT%20%0A%20%20%3FcouncilArea%0A%20%20(str(YEAR(%3FpopulationWhen))%20as%20%3Fyear%20)%0A%20%20%3Fpopulation%0A%20%20%3FcouncilAreaLabel%0AWHERE%20%7B%0A%20%20%3FcouncilArea%20wdt%3AP31%20wd%3AQ15060255%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20p%3AP1082%20%3FpopulationEntity%20.%0A%20%20%3FpopulationEntity%20ps%3AP1082%20%3Fpopulation%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20pq%3AP585%20%3FpopulationWhen%20.%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%27%5BAUTO_LANGUAGE%5D%2Cen%27%20.%20%7D%0A%7D)<< is a line graph, dynamically generated from the new Wikidata data, that can be embedded in any web page.\n",
+    "And >><a href=\"(https://query.wikidata.org/embed.html#%23defaultView%3ALineChart%0ASELECT%20%0A%20%20%3FcouncilArea%0A%20%20(str(YEAR(%3FpopulationWhen))%20as%20%3Fyear%20)%0A%20%20%3Fpopulation%0A%20%20%3FcouncilAreaLabel%0AWHERE%20%7B%0A%20%20%3FcouncilArea%20wdt%3AP31%20wd%3AQ15060255%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20p%3AP1082%20%3FpopulationEntity%20.%0A%20%20%3FpopulationEntity%20ps%3AP1082%20%3Fpopulation%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20pq%3AP585%20%3FpopulationWhen%20.%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%27%5BAUTO_LANGUAGE%5D%2Cen%27%20.%20%7D%0A%7D\">here</a><< is a line graph, dynamically generated from the new Wikidata data, that can be embedded in any web page.\n",
     "\n",
     "### 4.3. Concerns, next steps, alternative approaches\n",
     "\n",
