--- a/dataset-into-wikidata/dataset-into-wikidata.ipynb
+++ b/dataset-into-wikidata/dataset-into-wikidata.ipynb
@@ -104,7 +104,7 @@
     "Considering the _council area_ aspect of the dataset, \n",
     "how do `scotgov` (statistic.gov.scot) and `wikidata` (Wikidata) compare?\n",
     "\n",
-    "`scotgov` identifies council areas by a 9 character codes (e.g. `S12000030` identifies the Stirling council area).   \n",
+    "`scotgov` identifies council areas by 9-character codes (e.g. `S12000030` identifies the Stirling council area).   \n",
     "Happily, `wikidata` can also identify Scottish council areas using the same codes.\n",
     "\n",
     "### 2.1. Council area codes data from statistics.gov.scot "
@@ -161,6 +161,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Hyperlink](https://statistics.gov.scot/sparql?query=PREFIX%20rdfs%3A%20%3Chttp%3A%2F%2Fwww.w3.org%2F2000%2F01%2Frdf-schema%23%3E%0APREFIX%20uent%3A%20%3Chttp%3A%2F%2Fstatistics.data.gov.uk%2Fdef%2Fstatistical-entity%23%3E%0APREFIX%20ugeo%3A%20%3Chttp%3A%2F%2Fstatistics.data.gov.uk%2Fdef%2Fstatistical-geography%23%3E%0A%0ASELECT%20%0A%20%20(strafter(str(%3FareaUri)%2C%20%27http%3A%2F%2Fstatistics.gov.scot%2Fid%2Fstatistical-geography%2F%27)%20as%20%3Fcode)%20%0A%20%20%3Flabel%0A%0AWHERE%20%7B%0A%20%20%3FareaUri%20uent%3Acode%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fid%2Fstatistical-entity%2FS12%3E%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20ugeo%3Astatus%20%27Live%27%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20rdfs%3Alabel%20%3Flabel%20.%0A%7D) to try out the above SPARQL query."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -170,13 +177,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |            :label |\n",
-      "|-----------+-------------------|\n",
-      "| S12000047 |              Fife |\n",
-      "| S12000021 |    North Ayrshire |\n",
-      "| S12000050 | North Lanarkshire |\n",
-      "| S12000047 |              Fife |\n",
-      "| S12000008 |     East Ayrshire |\n"
+      "|     :code |              :label |\n",
+      "|-----------+---------------------|\n",
+      "| S12000050 |   North Lanarkshire |\n",
+      "| S12000033 |       Aberdeen City |\n",
+      "| S12000048 |   Perth and Kinross |\n",
+      "| S12000045 | East Dunbartonshire |\n",
+      "| S12000018 |          Inverclyde |\n"
      ]
     },
     {
@@ -255,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hyperlink to try out the above SPARQL: [https://w.wiki/boe](https://w.wiki/boe)"
+    "[Hyperlink](https://w.wiki/boe](https://w.wiki/boe) to try out the above SPARQL query."
    ]
   },
   {
@@ -268,13 +275,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |         :label |\n",
-      "|-----------+----------------|\n",
-      "| S12000047 |           Fife |\n",
-      "| S12000021 | North Ayrshire |\n",
-      "| S12000030 |       Stirling |\n",
-      "| S12000028 | South Ayrshire |\n",
-      "| S12000010 |   East Lothian |\n"
+      "|     :code |                :label |\n",
+      "|-----------+-----------------------|\n",
+      "| S12000048 |     Perth and Kinross |\n",
+      "| S12000006 | Dumfries and Galloway |\n",
+      "| S12000017 |              Highland |\n",
+      "| S12000049 |          Glasgow City |\n",
+      "| S12000036 |     City of Edinburgh |\n"
      ]
     },
     {
@@ -445,6 +452,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Hyperlink](https://statistics.gov.scot/sparql?query=PREFIX%20qb%3A%20%3Chttp%3A%2F%2Fpurl.org%2Flinked-data%2Fcube%23%3E%0APREFIX%20rdfs%3A%20%3Chttp%3A%2F%2Fwww.w3.org%2F2000%2F01%2Frdf-schema%23%3E%0APREFIX%20pdmx%3A%20%3Chttp%3A%2F%2Fpurl.org%2Flinked-data%2Fsdmx%2F2009%2Fdimension%23%3E%0APREFIX%20sdmx%3A%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fdef%2Fdimension%2F%3E%0APREFIX%20snum%3A%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fdef%2Fmeasure-properties%2F%3E%0APREFIX%20uent%3A%20%3Chttp%3A%2F%2Fstatistics.data.gov.uk%2Fdef%2Fstatistical-entity%23%3E%0APREFIX%20ugeo%3A%20%3Chttp%3A%2F%2Fstatistics.data.gov.uk%2Fdef%2Fstatistical-geography%23%3E%0A%0ASELECT%20%0A%20%20(strafter(str(%3FareaUri)%2C%20%27http%3A%2F%2Fstatistics.gov.scot%2Fid%2Fstatistical-geography%2F%27)%20as%20%3Fcode)%20%0A%20%20%3Flabel%0A%20%20%3Fyear%0A%20%20%3Fpopulation%0A%0AWHERE%20%7B%0A%20%20%3FareaUri%20uent%3Acode%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fid%2Fstatistical-entity%2FS12%3E%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20ugeo%3Astatus%20%27Live%27%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20rdfs%3Alabel%20%3Flabel%20.%0A%20%20%20%20%20%20%20%20%20%20%20%0A%20%20%3FpopulationUri%20qb%3AdataSet%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fdata%2Fpopulation-estimates-current-geographic-boundaries%3E%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20pdmx%3ArefArea%20%3FareaUri%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20pdmx%3ArefPeriod%20%3FperiodUri%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20sdmx%3Aage%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fdef%2Fconcept%2Fage%2Fall%3E%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20sdmx%3Asex%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fdef%2Fconcept%2Fsex%2Fall%3E%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20snum%3Acount%20%3Fpopulation%20.%0A%20%20%0A%20%20%3FperiodUri%20rdfs%3Alabel%20%3Fyear%20.%0A%7D) to try out the above SPARQL query."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -454,13 +468,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |            :label | :year | :population |\n",
-      "|-----------+-------------------+-------+-------------|\n",
-      "| S12000023 |    Orkney Islands |  2011 |       21420 |\n",
-      "| S12000023 |    Orkney Islands |  2018 |       22190 |\n",
-      "| S12000050 | North Lanarkshire |  2008 |      333280 |\n",
-      "| S12000048 | Perth and Kinross |  2002 |      135130 |\n",
-      "| S12000018 |        Inverclyde |  2001 |       84150 |\n"
+      "|     :code |              :label | :year | :population |\n",
+      "|-----------+---------------------+-------+-------------|\n",
+      "| S12000036 |   City of Edinburgh |  2001 |      449020 |\n",
+      "| S12000039 | West Dunbartonshire |  2012 |       90340 |\n",
+      "| S12000047 |                Fife |  2013 |      366900 |\n",
+      "| S12000008 |       East Ayrshire |  2017 |      121940 |\n",
+      "| S12000035 |     Argyll and Bute |  2009 |       89450 |\n"
      ]
     },
     {
@@ -545,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hyperlink to try out the above SPARQL: [https://w.wiki/boc](https://w.wiki/boc)"
+    "[Hyperlink](https://w.wiki/boc](https://w.wiki/boc) to try out the above SPARQL query."
    ]
   },
   {
@@ -558,13 +572,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |            :label | :year | :population |\n",
-      "|-----------+-------------------+-------+-------------|\n",
-      "| S12000023 |    Orkney Islands |  2017 |       22000 |\n",
-      "| S12000023 |    Orkney Islands |  2001 |       19220 |\n",
-      "| S12000050 | North Lanarkshire |  2019 |      341370 |\n",
-      "| S12000048 | Perth and Kinross |  2012 |      147740 |\n",
-      "| S12000027 |  Shetland Islands |  2011 |       23240 |\n"
+      "|     :code |                :label | :year | :population |\n",
+      "|-----------+-----------------------+-------+-------------|\n",
+      "| S12000033 |         Aberdeen City |  2005 |      208690 |\n",
+      "| S12000047 |                  Fife |  2018 |      371910 |\n",
+      "| S12000006 | Dumfries and Galloway |  2019 |      148860 |\n",
+      "| S12000026 |      Scottish Borders |  2012 |      113720 |\n",
+      "| S12000034 |         Aberdeenshire |  2018 |      261470 |\n"
      ]
     },
     {
